<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center_horizontal"
            android:text="@string/title" />

        <ImageButton
            android:layout_marginTop="20dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/play_button_text"
            android:id="@+id/play_button"
            android:background="@drawable/play_button"
            style="?android:attr/borderlessButtonStyle" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp">
        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/rate_button_text"
            android:id="@+id/rate_button"
            android:background="@drawable/rate_button"
            style="?android:attr/borderlessButtonStyle" />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/help_button_text"
            android:id="@+id/help_button"
            android:background="@drawable/help_button"
            style="?android:attr/borderlessButtonStyle" />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/settings_button_text"
            android:id="@+id/settings_button"
            android:background="@drawable/settings_button"
            style="?android:attr/borderlessButtonStyle" />
    </LinearLayout>
</FrameLayout>

