<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:orientation="vertical"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/sound_switch_text"
                android:layout_weight="3"/>
            <Switch
                android:id="@+id/sound_switch"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textOn="@string/switch_on_state"
                android:textOff="@string/switch_off_state"
                android:layout_weight="1"/>
        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="10"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/vibration_switch_text"
                android:layout_weight="3"/>
            <Switch
                android:id="@+id/vibration_switch"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textOn="@string/switch_on_state"
                android:textOff="@string/switch_off_state"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>